# zatca_dash

./: .gitignore  README.md  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  i18n.js  main.js  router.js
frontend/src/components/: KpiCard.vue  SalesChart.vue
frontend/src/pages/: BranchStatus.vue  Dashboard.vue  InvoiceList.vue  Settings.vue
zatca_dashboard/: hooks.py  modules.txt
zatca_dashboard/api/: alerts.py  invoices.py
zatca_dashboard/fixtures/: number_card.json
zatca_dashboard/tests/: test_permissions.py
zatca_dashboard/zatca_dashboard/doctype/zatca_api_settings/: zatca_api_settings.json  zatca_api_settings.py
zatca_dashboard/zatca_dashboard/page/sales_monitor/: sales_monitor.css  sales_monitor.js  sales_monitor.json
zatca_dashboard/zatca_dashboard/page/zatca_dashboard/: zatca_dashboard.js  zatca_dashboard.json
zatca_dashboard/zatca_dashboard/workspace/branch_sales_monitoring/: branch_sales_monitoring.json
zatca_dashboard/zatca_dashboard/workspace/branch_sales_tracking/: branch_sales_tracking.json
zatca_dashboard/zatca_dashboard/workspace/sales_invoice/: sales_invoice.json
zatca_dashboard/zatca_dashboard/workspace/zatca_api_settings/: zatca_api_settings.json
zatca_dashboard/zatca_dashboard/workspace/zatca_dashboard/: zatca_dashboard.json
zatca_dashboard/zatca_dashboard/workspace/إعدادات_ZATCA/: إعدادات_ZATCA.json
zatca_dashboard/zatca_dashboard/workspace/فواتير_المبيعات/: فواتير_المبيعات.json
zatca_dashboard/zatca_dashboard/workspace/لوحة_تحكم_ZATCA/: لوحة_تحكم_ZATCA.json
(+1 files in other folders)
