[project]
name = "zatca_dashboard"
authors = [{ name = "Ahmad", email = "info@ideaorbit.net" }]
description = "Professional ZATCA Invoice Dashboard for Frappe 15"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = ["frappe"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "zatca_dashboard"
